# sakuramml-player

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bbs6-2386.mml  build.sh  scratch_test.rs  test.mid  test.mml
docs/: architecture.md  cli-audio-noise.md  cli-playback-lessons.md  getting-started.md  midi.md  native-audio.md  project-structure.md
samples/: bbs6-2386.mml  doro.mml  test.mml  test3.mml
src/: lib.rs  main.rs  midi_parser.rs  player.rs  soundfont.rs  synth.rs  synth_psg.rs  utils.rs
www/: app.js  audio-worklet-processor.js  index.html  style.css
www/fonts/: LICENSE.md
