[package]
name = "sakuramml-player"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19"
wasm-bindgen = "0.2"
js-sys = "0.3"
rustysynth = "1.3.6"
wav_io = "0.1.17"
sakuramml = "0.1.45"

[profile.release]
opt-level = "s"
lto = true

[[bin]]
name = "sakuramml-player"
path = "src/main.rs"
